testsuite/tests/contrib/lkt_semantic/invalid_class_derivation/test.lkt
# Check that deriving from anything but a class is rejected

# First, define some helpers...
trait MyTrait {
}

struct MyStruct {
}

class MyClass {
}

generic[T] struct MyGenericStruct {
}

generic[T] class MyGenericClass {
}

# Then run the checks

@invalid class C1 : MyTrait {
}

@invalid class C2 : MyStruct {
}

@invalid generic[T] class C3 : T {
}

generic[class T] class C4 : T {
}

class C5 : MyClass {
}

@invalid class C6 : MyGenericStruct[Int] {
}

class C7 : MyGenericClass[Int] {
}
